--- a/index.html
+++ b/index.html
@@ -1,20 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content="portfolio about Tamule">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
+     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+     <title>Tamule Waites</title>
 </head>
 <body>
-  <h2>Hi there </h2>
-    <h1> I am Tamule Waites</h1>
-<h4>Front-end Developer based in South Africa</h4>
-<div class="navigation-links">
-<a href="contact.html" class="about">About</a>
-<a href="contact.html#contact" class="contact">Contact Me</a>
-</div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Tamule Waites</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#"
+              >Home <span class="sr-only"></span></a
+            >
+            <a class="nav-item nav-link" href="about.html">About me</a>
+            <a class="nav-item nav-link" href="about.html#contact-me"
+              >Contact me</a
+            >
+          </div>
+        </div>
+      </nav>
+      <h2>👋 Hi I am</h2>
+    <h1>Tamule Waites</h1>
+    <h3> 🇿🇦 Front-end developer, based in Johannesburg</h3>
+      <div class="buttons">
+        <button class="about">
+          <a href="about.html"> About Me </a>
+        </button>
+        <button class="contact">
+          <a href="about.html#contact-me"> Contact Me </a>
+        </button>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="images/yogapic.png" class="img-fluid rounded" />
+          </div>
+          <div class="col-md-6">
+            <h2 class="apps">Yoga app</h2>
+            <br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+            <br />
+            <button class="launch">
+              <a href="index.html#hi"> Launch Yoga app </a>
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <h2 class="apps">Weather app</h2>
+            <br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+            <br />
+            <button class="launch">
+              <a href="index.html#hi"> Launch Weather app </a>
+            </button>
+          </div>
+          <div class="col-md-6">
+            <img src="images/weatherpic.png" class="img-fluid rounded" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img src="images/yogurtpic.png" class="img-fluid rounded" />
+          </div>
+          <div class="col-md-6">
+            <h2 class="apps">Yogurt app</h2>
+            <br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+            <br />
+            <button class="launch">
+              <a href="index.html#hi"> Launch Yogurt app </a>
+            </button>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
