--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Tamule Waites is a front end developer from SA , view some of her work.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +17,7 @@
     <title>About Tamule</title>
 </head>
 <body>
-    <a href="index.html" class="homepage-link">Back to homepage</a>
+    <a href="index.html" class="homepage-link" title="homepage">Back to homepage</a>
     <h1>About me</h1>
     <h3>Front-end developer from Johannesburg, South Africa</h3>
     <div class="paragraphs">
