--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Tamule Waites is a front end developer from SA , view some of her work.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,11 +14,11 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-     <title>Tamule Waites</title>
+     <title>Front-end developer-Tamule Waites</title>
 </head>
 <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Tamule Waites</a>
+        <a class="navbar-brand" href="#" title="homepage">Tamule Waites</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -34,8 +35,8 @@
             <a class="nav-item nav-link active" href="#"
               >Home <span class="sr-only"></span></a
             >
-            <a class="nav-item nav-link" href="about.html">About me</a>
-            <a class="nav-item nav-link" href="about.html#contact-me"
+            <a class="nav-item nav-link" href="about.html" title="About Tamule Waites">About me</a>
+            <a class="nav-item nav-link" href="about.html#contact-me" title="contact Tamule Waites"
               >Contact me</a
             >
           </div>
@@ -46,16 +47,16 @@
     <h3> 🇿🇦 Front-end developer, based in Johannesburg</h3>
       <div class="buttons">
         <button class="about">
-          <a href="about.html"> About Me </a>
+          <a href="about.html" title="about Tamule Waites"> About Me </a>
         </button>
         <button class="contact">
-          <a href="about.html#contact-me"> Contact Me </a>
+          <a href="about.html#contact-me" title="Contact Tamule Waites"> Contact Me </a>
         </button>
       </div>
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="images/yogapic.png" class="img-fluid rounded" />
+            <img src="yogapic.png" class="img-fluid rounded" />
           </div>
           <div class="col-md-6">
             <h2 class="apps">Yoga app</h2>
@@ -66,12 +67,12 @@
             explicabo eum dolore.
             <br />
             <button class="launch">
-              <a href="index.html#hi"> Launch Yoga app </a>
+              <a href="index.html#hi" title="Yoga project"> Launch Yoga app </a>
             </button>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <h2 class="apps">Weather app</h2>
             <br />
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -80,18 +81,18 @@
             explicabo eum dolore.
             <br />
             <button class="launch">
-              <a href="index.html#hi"> Launch Weather app </a>
+              <a href="index.html#hi"class="project-link" title="weather project"> Launch Weather app </a>
             </button>
           </div>
-          <div class="col-md-6">
-            <img src="images/weatherpic.png" class="img-fluid rounded" />
+          <div class="col-sm-6">
+            <img src="weatherpic.png" class="img-fluid rounded project-link" />
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
-            <img src="images/yogurtpic.png" class="img-fluid rounded" />
+          <div class="col-sm-6">
+            <img src="yogurtpic.png" class="img-fluid rounded project-link" />
           </div>
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <h2 class="apps">Yogurt app</h2>
             <br />
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -100,7 +101,7 @@
             explicabo eum dolore.
             <br />
             <button class="launch">
-              <a href="index.html#hi"> Launch Yogurt app </a>
+              <a href="index.html#hi" title="yogurt project"> Launch Yogurt app </a>
             </button>
           </div>
         </div>
